@@ -9,6 +9,7 @@ import com.rometools.rome.io.XmlReader;
 import io.lettuce.core.resource.ClientResources;
 import io.micrometer.observation.ObservationRegistry;
 
+import jakarta.annotation.PostConstruct;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.boot.SpringApplication;
@@ -20,7 +21,9 @@ import org.springframework.data.redis.connection.lettuce.observability.Micromete
 import org.springframework.data.redis.core.RedisHash;
 import org.springframework.data.redis.repository.configuration.EnableRedisRepositories;
 import org.springframework.data.repository.CrudRepository;
+import org.springframework.util.Assert;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.client.RestClient;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
@@ -46,6 +49,18 @@ class YouTubeController {
 	YouTubeController(EventRepository eventRepository) {
 		this.eventRepository = eventRepository;
 	}
+	
+	@PostConstruct
+	void init(){
+		RestClient defaultClient = RestClient.create();
+		String result = defaultClient.get()
+				.uri("https://www.youtube.com/feeds/videos.xml?channel_id=UCuGoHRQbVXa4LxepmPOdUfQ")
+				.retrieve()
+				.body(String.class);
+		logger.info("Initialized");
+		Assert.notNull(result, "Result is null");
+		logger.info(listen(result));
+	}
 
 	@PostMapping(value = "/", consumes = "application/atom+xml")
 	String listen(@RequestBody String atomXml) {
@@ -56,7 +71,7 @@ class YouTubeController {
 							new XmlReader(
 									new ByteArrayInputStream(atomXml.getBytes(StandardCharsets.UTF_8))));
 			for (SyndEntry entry : feed.getEntries()) {
-				String key = String.format("%s:%s",entry.getUri(),System.currentTimeMillis());
+				String key = "feed:%s".formatted(entry.getUri());
 				YouTubeEvent youTubeEvent = new YouTubeEvent(key,atomXml);
 				eventRepository.save(youTubeEvent);
 				logger.info(entry.toString());
